--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://pestillilab.github.io/"
+baseURL = "https://vincibooherlab.github.io/"
 languageCode = "en-us"
 
 [module]
@@ -27,10 +27,9 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
   # URL = "/news"
   # weight = 5
 
-
 [params]
 
-  googleMaps = "AIzaSyD_DdEi4sKJWYq6zIxOtJ381CtzsB8hh5o"
+  googleMaps = ""
   googleTagManagerID = ""
 
   title = "Pestilli Lab"
