--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://vincibooherlab.github.io/"
+tbaseURL = "https://vincibooherlab.github.io/"
 languageCode = "en-us"
 
 [module]
@@ -32,7 +32,7 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
   googleMaps = ""
   googleTagManagerID = ""
 
-  title = "Pestilli Lab"
+  title = "Perception, Action, and Learning Lab"
 
   [params.logo]
     img = "/img/pestillilab-01.svg"
@@ -40,14 +40,13 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 
   [params.footer]
 
-    title = "Pestilli Lab"
+    title = "Perception, Action, and Learning Lab"
     address = [
-      "Department of Psychology",
-      "The University of Texas at Austin",
-      "SEA 4.208 108 E.",
-      "Dean Keeton Stop A8000",
-      "Austin, TX",
-      "78712-1043"
+      "Department of Psychology and Human Development",
+      "Vanderbilt University",
+      "Peabody #552",
+      "230 Appleton Place",
+      "Nashville, TN, 37212",
     ]
 
     backgroundColor = "#F8F8F8"
@@ -62,16 +61,15 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
     [params.footer.RelatedLinks]
 
       [params.footer.RelatedLinks.Education]
-          "Psychology PHD" = "https://liberalarts.utexas.edu/psychology/graduate/phd.php"
-          "Neuroscience PHD" = "https://neuroscienceinstitute.utexas.edu/PhD%20Program"
-          "Computer Science PHD" = "https://www.cs.utexas.edu/graduate-program/phd-program"
+          "Psychology PHD" = "https://peabody.vanderbilt.edu/departments/psych/"
+          "Neuroscience PHD" = "https://medschool.vanderbilt.edu/brain-institute/new-vbi-homepage-inprogress/join-our-graduate-program/educational-neuroscience/"
 
       [params.footer.RelatedLinks.Research]
+          # insert link to MRItablet development: "NeuroscienceNetwork.org" = "https://neurosciencenetwork.org"
           "brainlife.io" = "https://brainlife.io"
-          "NeuroscienceNetwork.org" = "https://neurosciencenetwork.org"
 
       [params.footer.Institutional]
-          "Psychology Department" = "https://liberalarts.utexas.edu/psychology"
-          "The University of Texas" = "https://www.utexas.edu"
-          "TACC" = "https://www.tacc.utexas.edu"
-          "Indiana University UITS" = "https://dcops.iu.edu"
+          "Peabody College" = "https://liberalarts.utexas.edu/psychology"
+          "Vanderbilt Brain Institute" = "https://medschool.vanderbilt.edu/brain-institute/"
+          "Vanderbilt University Institute of Imaging Science " = "https://vuiis.vumc.org/"
+          "ACCRE" = "https://www.vanderbilt.edu/accre/"
