updated things to make alignment better

--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
   googleMaps = ""
   googleTagManagerID = ""
 
-  title = "Perception, Action, and Learning Lab"
+  title = "Perception, Action, & Learning Lab"
 
   [params.logo]
     img = "/img/pestillilab-01.svg"
@@ -40,9 +40,9 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 
   [params.footer]
 
-    title = "Perception, Action, and Learning Lab"
+    title = "Perception, Action, & Learning Lab"
     address = [
-      "Department of Psychology and Human Development",
+      "Dept. of Psychology and Human Development",
       "Vanderbilt University",
       "Peabody #552",
       "230 Appleton Place",
@@ -63,7 +63,8 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
       [params.footer.RelatedLinks.Education]
           "Psychology PHD" = "https://peabody.vanderbilt.edu/departments/psych/"
           "Neuroscience PHD" = "https://medschool.vanderbilt.edu/brain-institute/new-vbi-homepage-inprogress/join-our-graduate-program/educational-neuroscience/"
-
+          "" = ""
+          
       [params.footer.RelatedLinks.Research]
           # insert link to MRItablet development: "NeuroscienceNetwork.org" = "https://neurosciencenetwork.org"
           "brainlife.io" = "https://brainlife.io"
