--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
 
     title = "Perception, Action, & Learning Lab"
     address = [
-      "Dept. of Psychology and Human Development",
+      "Dept. of Psychology & Human Development",
       "Vanderbilt University",
       "Peabody #552",
       "230 Appleton Place",
